<resources>
    <string name="app_name">Industry Hit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="ok" translatable="false">OK</string>

    <string name="error_intenet_unavailable" translatable="false">Internet not available, Cross check your internet connectivity and try again</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="dismiss" translatable="false">Dismiss</string>
    <string name="request_failed" translatable="false">Request Failed</string>
    <string name="request_send" translatable="false">Request Send</string>

    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="reviews">Reviews</string>
    <string name="gossips">Gossips</string>
    <string name="exclusives">Exclusives</string>
    <string name="boxoffice">Boxoffice</string>
    <string name="interviews">Interviews</string>
    <string name="galleries">Galleries</string>
    <string name="videos">Videos</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="real_and_real">Real &amp; Real</string>
    <string name="shooting_spot_updates">Shooting Spot Updates</string>
    <string name="trade_reports">Trade Reports</string>
    <string name="collections">Collections</string>
    <string name="schedule">Schedule</string>
    <string name="events">Events</string>
    <string name="stills">Stills</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="heroes">Heroes</string>
    <string name="heroines">Heroines</string>
    <string name="models">Models</string>
    <string name="others">Others</string>
    <string name="trailers">Trailers</string>
    <string name="songs">Songs</string>
    <string name="pressmeets">Pressmeets</string>
    <string name="select_channel">Select Channel</string>
    <string name="cancel">Cancel</string>
    <string name="telugu">Telugu</string>
    <string name="english">English</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Log In</string>
    <string name="sign_up">Signup</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">Or</string>
    <string name="dont_have_an_acount">Don\'t have an account?</string>
    <string name="already_a_member">Already a member?</string>
    <string name="create_account">Create Account</string>
    <string name="this_field_required">This field required</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_valid_phonenumber">Please enter valid phone number</string>
    <string name="please_enter_valid_email_or_phonenumber">Please enter valid email or phone number</string>
    <string name="welcome">Welcome</string>
    <string name="language">Language</string>
    <string name="loading">Loading</string>
    <string name="lates_news">Latest News</string>
    <string name="my_account">My Account</string>
    <string name="notifications">Notifications</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>
</resources>
