<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.login.activity.RegistrationAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/icon_red_back"/>
        <com.industryhit.industryhit.presentation.globalutils.custom.CustomTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/create_account"
            style="@style/text_view_style"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/img_close"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/close_dark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/padding_50dp"
        android:padding="@dimen/padding_30dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.industryhit.industryhit.presentation.globalutils.custom.CustomEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textAllCaps="true"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.industryhit.industryhit.presentation.globalutils.custom.CustomEditText
                android:id="@+id/email_or_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_or_phone"
                android:textAllCaps="true"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10dp"
            app:passwordToggleEnabled="true">

            <com.industryhit.industryhit.presentation.globalutils.custom.CustomEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAllCaps="true"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <com.industryhit.industryhit.presentation.globalutils.custom.CustomTextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="@dimen/padding_10dp"
            style="@style/click_button_style"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_30dp"
            android:orientation="horizontal">
            <com.industryhit.industryhit.presentation.globalutils.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_a_member"
                style="@style/text_view_style"
                android:gravity="center_horizontal"/>

            <com.industryhit.industryhit.presentation.globalutils.custom.CustomTextViewBold
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/text_view_style"
                android:layout_marginLeft="@dimen/padding_5dp"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <com.industryhit.industryhit.presentation.globalutils.custom.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginTop="@dimen/padding_30dp"
            style="@style/text_view_style"
            android:textAllCaps="true"
            android:gravity="center_horizontal"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_10dp">

            <ImageView
                android:layout_width="@dimen/logo_width_50dp"
                android:layout_height="@dimen/logo_height_50dp"
                android:src="@drawable/facebook_logo"/>

            <View
                android:layout_width="@dimen/padding_50dp"
                android:layout_height="@dimen/padding_10dp"
                android:layout_gravity="center"
                android:background="@color/white"/>

            <ImageView
                android:layout_width="@dimen/logo_width_50dp"
                android:layout_height="@dimen/logo_height_50dp"
                android:src="@drawable/google_logo"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>