<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.login.activity.Login_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/ic_contacts_height"
            android:layout_gravity="right"
            android:src="@drawable/close_dark"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_20dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_100dp"
                android:layout_margin="@dimen/padding_10dp"
                android:src="@drawable/logo_full"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.industryhit.industryhit.presentation.globalutils.custom.CustomEditText
                    android:id="@+id/email_or_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_or_phone"
                    android:textAllCaps="true"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10dp"
                app:passwordToggleEnabled="true">

                <com.industryhit.industryhit.presentation.globalutils.custom.CustomEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAllCaps="true"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <com.industryhit.industryhit.presentation.globalutils.custom.CustomTextView
                android:id="@+id/login"
                style="@style/click_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10dp"
                android:text="@string/login" />

            <com.industryhit.industryhit.presentation.globalutils.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginTop="@dimen/padding_10dp"
                style="@style/text_view_style"
                android:gravity="center_horizontal"/>

            <com.industryhit.industryhit.presentation.globalutils.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_marginTop="@dimen/padding_30dp"
                style="@style/text_view_style"
                android:textAllCaps="true"
                android:gravity="center_horizontal"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_sign_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_10dp">

                <ImageView
                    android:layout_width="@dimen/logo_width_50dp"
                    android:layout_height="@dimen/logo_height_50dp"
                    android:src="@drawable/facebook_logo"/>

                <View
                    android:layout_width="@dimen/padding_50dp"
                    android:layout_height="@dimen/padding_10dp"
                    android:layout_gravity="center"
                    android:background="@color/white"/>

                <ImageView
                    android:id="@+id/google_signin"
                    android:layout_width="@dimen/logo_width_50dp"
                    android:layout_height="@dimen/logo_height_50dp"
                    android:src="@drawable/google_logo"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/padding_10dp"
                android:orientation="horizontal">
                <com.industryhit.industryhit.presentation.globalutils.custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_acount"
                    style="@style/text_view_style"
                    android:gravity="center_horizontal"/>

                <com.industryhit.industryhit.presentation.globalutils.custom.CustomTextViewBold
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    style="@style/text_view_style"
                    android:layout_marginLeft="@dimen/padding_5dp"
                    android:gravity="center_horizontal"/>

            </LinearLayout>
        </LinearLayout>

        </ScrollView>
    </LinearLayout>
</RelativeLayout>